--- a/index.html
+++ b/index.html
@@ -1,11 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
+
 <body>
-  
+  <nav>
+    <div class="logo">
+      <img class="logoImage" src="img/karraburgers_logo.png" alt="">
+    </div>
+    <ul class="nav-links">
+      <a href="#">Startsida</a>
+      <a href="#">Meny</a>
+      <a href="#">Om oss</a>
+      <a href="#">Kontakt</a>
+      <img id="instagram" src="img/instagram_logo.png" alt="">
+    </ul>
+
+    <div class="burger">
+      <div class="line1"></div>
+      <div class="line2"></div>
+      <div class="line3"></div>
+    </div>
+  </nav>
+  <script src="js/main.js"></script>
 </body>
+
 </html>
