--- a/index.html
+++ b/index.html
@@ -14,14 +14,15 @@
 <body>
   <nav>
     <div class="logo">
-      <img class="logoImage" src="img/karraburgers_logo.png" alt="">
+      <a href="#"><img class="logoImage" src="img/karraburgers_logo.png" alt="Hamburger logo"></a>
     </div>
     <ul class="nav-links">
       <a href="#">Startsida</a>
       <a href="#">Meny</a>
       <a href="#">Om oss</a>
       <a href="#">Kontakt</a>
-      <img id="instagram" src="img/instagram_logo.png" alt="">
+      <a href="https://www.instagram.com/karraburgers/"><img id="instagram" src="img/instagram_logo.png"
+          alt="Hamburger logo"></a>
     </ul>
 
     <div class="burger">
@@ -30,6 +31,12 @@
       <div class="line3"></div>
     </div>
   </nav>
+  <div id="wrapper">
+    <section class="main-page">
+      <h1 class="content-main text-main">Välkommen Till Kärra Burgers</h1>
+      <button class="content-main btn">Meny</button>
+    </section>
+  </div>
   <script src="js/main.js"></script>
 </body>
 
