--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
       <a href="https://www.instagram.com/karraburgers/"><img id="instagram" src="img/instagram_logo.png"
           alt="Hamburger logo"></a>
     </ul>
-
     <div class="burger">
       <div class="line1"></div>
       <div class="line2"></div>
@@ -32,9 +31,17 @@
     </div>
   </nav>
   <div id="wrapper">
+    <div class="slideshow-container">
+      <div class="my-slides fade slide-1">
+        <img src="img/burger_meal.webp" alt="Burger Meal">
+      </div>
+      <div class="my-slides fade slide-2">
+        <img src="img/holding_burger.webp" alt="A person holding a burger">
+      </div>
+    </div>
     <section class="main-page">
       <h1 class="content-main text-main">Välkommen Till Kärra Burgers</h1>
-      <button class="content-main btn">Meny</button>
+      <button class="content-main btn btn-text">Meny</button>
     </section>
   </div>
   <script src="js/main.js"></script>
