--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
+    rel="stylesheet">
 </head>
 
 <body id="index">
@@ -21,7 +26,7 @@
       </a>
     </div>
     <ul class="nav-links">
-      <a href="#">Startsida</a>
+      <a href="index.html">Startsida</a>
       <a href="menu.html">Meny</a>
       <a href="#">Om oss</a>
       <a href="#">Kontakt</a>
