--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
     <ul class="nav-links">
       <a href="index.html">Startsida</a>
       <a href="menu.html">Meny</a>
-      <a href="#">Om oss</a>
-      <a href="#">Kontakt</a>
-      <a href="https://www.instagram.com/karraburgers/"><img id="instagram" src="img/instagram_logo.png"
+      <a href="kontakt.html">Kontakt</a>
+      <a href="cards.html">Bilder</a>
+      <a href="https://www.instagram.com/karraburgers/" target="_blank"><img id="instagram" src="img/instagram_logo.png"
           alt="Hamburger logo"></a>
     </ul>
     <div class="burger">
@@ -42,10 +42,10 @@
   <div id="wrapper">
     <div class="slideshow-container">
       <div class="my-slides fade slide-1">
-        <img src="img/burger_meal.webp" alt="Burger Meal">
+        <img class="slides-img-1" src="img/burger_meal.webp" alt="Burger Meal">
       </div>
       <div class="my-slides fade slide-2">
-        <img src="img/holding_burger.webp" alt="A person holding a burger">
+        <img class="slides-img-2" src="img/holding_burger.webp" alt="A person holding a burger">
       </div>
     </div>
     <section class="main-page">
