--- a/menu.html
+++ b/menu.html
@@ -28,10 +28,10 @@
         <ul class="nav-links">
             <a href="index.html">Startsida</a>
             <a href="menu.html">Meny</a>
-            <a href="#">Om oss</a>
-            <a href="#">Kontakt</a>
-            <a href="https://www.instagram.com/karraburgers/"><img id="instagram" src="img/instagram_logo.png"
-                    alt="Hamburger logo" /></a>
+            <a href="kontakt.html">Kontakt</a>
+            <a href="cards.html">Bilder</a>
+            <a href="https://www.instagram.com/karraburgers/" target="_blank"><img id="instagram"
+                    src="img/instagram_logo.png" alt="Hamburger logo" /></a>
         </ul>
         <div class="burger">
             <div class="line1"></div>
@@ -41,10 +41,10 @@
     </nav>
     <div id="wrapper">
         <div class="slideshow-container">
-            <div class="my-slides fade slide-1">
+            <div class="my-slides fade slide-1 my-slides-menu">
                 <img src="img/burger_meal_16_by_9.webp" alt="Burger Meal" />
             </div>
-            <div class="my-slides fade slide-2">
+            <div class="my-slides fade slide-2 my-slides-menu">
                 <img src="img/holding_burger_16_by_9.webp" alt="A person holding a burger" />
             </div>
         </div>
