--- a/cards.html
+++ b/cards.html
@@ -15,32 +15,72 @@
         href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
         rel="stylesheet">
 </head>
-<body>
-    <div id="cards-wrapper">
-        <article class="card-1">
 
+<body id="cards-body">
+    <nav>
+        <div class="logo">
+            <a href="index.html" class="logo-link">
+                <img class="logo-image normal" src="img/burger_logo.webp" alt="black and white hamburger logo">
+                <img class="logo-image inverted hidden" src="img/burger_logo_inverted.webp"
+                    alt="Hamburger logo with inverted colors">
+            </a>
+        </div>
+        <section class="nav-links">
+            <a href="index.html">Startsida</a>
+            <a href="menu.html">Meny</a>
+            <a href="kontakt.html">Kontakt</a>
+            <a href="cards.html">Bilder</a>
+            <a href="https://www.instagram.com/karraburgers/" target="_blank"><img id="instagram"
+                    src="img/instagram_logo.png" alt="Hamburger logo"></a>
+        </section>
+        <div class="burger burger-color">
+            <div class="line1 burger-color"></div>
+            <div class="line2 burger-color"></div>
+            <div class="line3 burger-color"></div>
+        </div>
+    </nav>
+    <div id="cards-wrapper">
+        <article class="card-title">
+            <h1>Bilder</h1>
+        </article>
+        <article class="card-1">
+            <img class="card-img" src="img/blue_cheese_burger.webp" alt="blue chesse burger">
         </article>
         <article class="card-2">
-
+            <img class="card-img" src="img/burger_and_ps5.webp" alt="portrait of a burger meal with ps5 controller">
         </article>
         <article class="card-3">
-
+            <img class="card-img" src="img/burger_chilli.webp" alt="burger with a chilli">
         </article>
         <article class="card-4">
-
+            <img class="card-img" src="img/holding_burger.webp" alt="hands holding a burger">
         </article>
         <article class="card-5">
-
+            <img class="card-img" src="img/burger_meal.webp" alt="classic burger meal">
         </article>
         <article class="card-6">
-
+            <img class="card-img" src="img/avocado-burger.webp" alt="avocado burger">
         </article>
         <article class="card-7">
-
+            <img class="card-img" src="img/chicken-burger.webp" alt="chicken burger">
         </article>
         <article class="card-8">
-
+            <img class="card-img" src="img/french-fries.webp" alt="french fries">
+        </article>
+        <article class="card-9">
+            <img class="card-img" src="img/frying-burgers.webp" alt="burgers getting fried">
+        </article>
+        <article class="card-10">
+            <img class="card-img" src="img/jala-burger.webp" alt="jalapeno burger">
+        </article>
+        <article class="card-11">
+            <img class="card-img" src="img/uncomp-burger.webp" alt="buger getting built">
+        </article>
+        <article class="card-12">
+            <img class="card-img" src="img/vegan-burger.webp" alt="vegan burger">
         </article>
     </div>
+    <script src="js/main.js"></script>
 </body>
+
 </html>
