--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
           alt="Hamburger logo with inverted colors">
       </a>
     </div>
-    <ul class="nav-links">
+    <section class="nav-links">
       <a href="index.html">Startsida</a>
       <a href="menu.html">Meny</a>
       <a href="kontakt.html">Kontakt</a>
       <a href="cards.html">Bilder</a>
       <a href="https://www.instagram.com/karraburgers/" target="_blank"><img id="instagram" src="img/instagram_logo.png"
           alt="Hamburger logo"></a>
-    </ul>
+    </section>
     <div class="burger">
       <div class="line1"></div>
       <div class="line2"></div>
@@ -41,16 +41,16 @@
   </nav>
   <div id="wrapper">
     <div class="slideshow-container">
-      <div class="my-slides fade slide-1">
-        <img class="slides-img-1" src="img/burger_meal.webp" alt="Burger Meal">
+      <div class="my-slides fade slide-1 my-slides-menu">
+        <img class="slides-img-1 slide-img" src="img/burger_meal_16_by_9.webp" alt="Burger Meal">
       </div>
-      <div class="my-slides fade slide-2">
-        <img class="slides-img-2" src="img/holding_burger.webp" alt="A person holding a burger">
+      <div class="my-slides fade slide-2 my-slides-menu">
+        <img class="slides-img-2 slide-img" src="img/holding_burger_16_by_9.webp" alt="A person holding a burger">
       </div>
     </div>
     <section class="main-page">
       <h1 class="content-main text-main">Välkommen Till Kärra Burgers</h1>
-      <a href="menu.html"><button class="content-main btn btn-text">Meny</button></a>
+      <a href="menu.html"><button id="index-btn">Meny</button></a>
     </section>
   </div>
   <script src="js/main.js"></script>
