--- a/kontakt.html
+++ b/kontakt.html
@@ -25,18 +25,18 @@
                     alt="Hamburger logo with inverted colors" />
             </a>
         </div>
-        <ul class="nav-links">
+        <section class="nav-links">
             <a href="index.html">Startsida</a>
             <a href="menu.html">Meny</a>
             <a href="#">Kontakt</a>
             <a href="cards.html">Bilder</a>
             <a href="https://www.instagram.com/karraburgers/" target="_blank"><img id="instagram"
                     src="img/instagram_logo.png" alt="Hamburger logo" /></a>
-        </ul>
+        </section>
         <div class="burger">
-            <div class="line1"></div>
-            <div class="line2"></div>
-            <div class="line3"></div>
+            <div class="line1 burger-color"></div>
+            <div class="line2 burger-color"></div>
+            <div class="line3 burger-color"></div>
         </div>
     </nav>
     <div id="wrapper">
