--- a/menu.html
+++ b/menu.html
@@ -25,14 +25,14 @@
                     alt="Hamburger logo with inverted colors" />
             </a>
         </div>
-        <ul class="nav-links">
+        <section class="nav-links">
             <a href="index.html">Startsida</a>
             <a href="menu.html">Meny</a>
             <a href="kontakt.html">Kontakt</a>
             <a href="cards.html">Bilder</a>
             <a href="https://www.instagram.com/karraburgers/" target="_blank"><img id="instagram"
                     src="img/instagram_logo.png" alt="Hamburger logo" /></a>
-        </ul>
+        </section>
         <div class="burger">
             <div class="line1"></div>
             <div class="line2"></div>
@@ -42,10 +42,10 @@
     <div id="wrapper">
         <div class="slideshow-container">
             <div class="my-slides fade slide-1 my-slides-menu">
-                <img src="img/burger_meal_16_by_9.webp" alt="Burger Meal" />
+                <img class="slide-img" src="img/burger_meal_16_by_9.webp" alt="Burger Meal" />
             </div>
             <div class="my-slides fade slide-2 my-slides-menu">
-                <img src="img/holding_burger_16_by_9.webp" alt="A person holding a burger" />
+                <img class="slide-img" src="img/holding_burger_16_by_9.webp" alt="A person holding a burger" />
             </div>
         </div>
         <section class="main-page">
@@ -53,7 +53,7 @@
             <button id="scroll-down-button" class="btn btn-text">Gå Till Meny</button>
         </section>
     </div>
-    <section class="menu">
+    <section id="menu">
         <section class="burgers">
             <h2 class="menu-title">Burgers</h2>
             <ul>
